--- a/yeehaw/nasx.css
+++ b/yeehaw/nasx.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	left: 140px;
 	top: 80px;
-	background-image: url(nasx.jpeg);
+	background-image: url(nasx1.jpg);
 	background-size: contain;
 	width: 360px;
 	height: 470px;	
